--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: hsl(180, 90%, 80%);
+    background-color: hsl(180, 70%, 90%);
     font-family: sans-serif;
     display: flex;
     flex-direction: column;
@@ -10,7 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: hsl(0, 0%, 70%);
+    background-color: hsl(0, 0%, 80%);
     width: 700px;
     height: 800px;
     border-radius: 10px;
@@ -19,17 +19,27 @@ body {
 
 .visor {
     background-color: hsl(0, 0%, 5%);
-    color: hsl(220, 70%, 60%);
-    font-size: 90px;
+    color: hsl(220, 100%, 70%);
     text-align: end;
     width: 90%;
-    margin: 60px 0 70px 0;
+    height: 150px;
+    margin: 60px 0 50px 0;
     border-radius: 10px;
+}
+
+.visor .previous {
+    font-size: 30px;
+    margin: 5px 5px;
+}
+
+.visor .current {
+    font-size: 100px;
+    margin: 5px 5px;
 }
 
 .buttons {
     display: flex;
-    background-color: hsl(0, 0%, 40%);
+    background-color: hsl(0, 0%, 50%);
     border-radius: 10px;
     width: 90%;
     padding: 10px 0;
@@ -74,7 +84,7 @@ body {
 
 .function {
     height: 50%;
-    background-color: hsl(220, 70%, 60%);
+    background-color: hsl(220, 75%, 60%);
     color: hsl(0, 0%, 100%);
     width: 50%;
 }
